Fixing typo in footer

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@ if (empty($fileErrors)) {
               <p>
                 <strong>Zend Framework</strong><br />
                 <a href="http://framework.zend.com/">framework.zend.com</a><br />
-                <a href="https://docs.zendframeork.com">docs.zendframework.com</a><br />
+                <a href="https://docs.zendframework.com">docs.zendframework.com</a><br />
                 <a href="https://packages.zendframework.com">packages.zendframework.com</a><br />
                 <a href="https://apigility.org">apigility.org</a><br />
               </p>
@@ -438,5 +438,5 @@ if (empty($fileErrors)) {
 
 <!--
 MkDocs version : 0.15.3
-Build Date UTC : 2016-06-28 11:21:50.547029
+Build Date UTC : 2016-06-28 16:36:06.074431
 -->
